k8s/service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: quizofkings-panel-service
  namespace: qok-server-ng
  labels:
    app: qokserver
    component: panel
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: qokserver
    component: panel
